--- a/packages/index.qmd
+++ b/packages/index.qmd
@@ -24,17 +24,17 @@ listing:
 
 |Package|Lifecycle|CRAN Version|Monthly Downloads| R-CMD-Check|GitHub Stars|GitHub Issues|
 |---|---|---|---|---|---|---|
-|golem|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=golem">  <img src="https://www.r-pkg.org/badges/version/golem"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/golem">  <img src="https://cranlogs.r-pkg.org/badges/golem"/></a>|<a href="https://github.com/ThinkR-open/golem/actions">  <img src="https://github.com/ThinkR-open/golem/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/ThinkR-open/golem" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/ThinkR-open/golem/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|shinipsum|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=shinipsum">  <img src="https://www.r-pkg.org/badges/version/shinipsum"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/shinipsum">  <img src="https://cranlogs.r-pkg.org/badges/shinipsum"/></a>|<a href="https://github.com/ThinkR-open/shinipsum/actions">  <img src="https://github.com/ThinkR-open/shinipsum/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/ThinkR-open/shinipsum" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/ThinkR-open/shinipsum/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|fakir|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=fakir">  <img src="https://www.r-pkg.org/badges/version/fakir"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/fakir">  <img src="https://cranlogs.r-pkg.org/badges/fakir"/></a>|<a href="https://github.com/ThinkR-open/fakir/actions">  <img src="https://github.com/ThinkR-open/fakir/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/ThinkR-open/fakir" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/ThinkR-open/fakir/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|gargoyle|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=gargoyle">  <img src="https://www.r-pkg.org/badges/version/gargoyle"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/gargoyle">  <img src="https://cranlogs.r-pkg.org/badges/gargoyle"/></a>|<a href="https://github.com/colinfay/gargoyle/actions">  <img src="https://github.com/colinfay/gargoyle/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/colinfay/gargoyle" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/colinfay/gargoyle/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|dockerfiler|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=dockerfiler">  <img src="https://www.r-pkg.org/badges/version/dockerfiler"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/dockerfiler">  <img src="https://cranlogs.r-pkg.org/badges/dockerfiler"/></a>|<a href="https://github.com/thinkr-open/dockerfiler/actions">  <img src="https://github.com/thinkr-open/dockerfiler/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/thinkr-open/dockerfiler" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/dockerfiler/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|gemstones|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=gemstones">  <img src="https://www.r-pkg.org/badges/version/gemstones"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/gemstones">  <img src="https://cranlogs.r-pkg.org/badges/gemstones"/></a>|<a href="https://github.com/thinkr-open/gemstones/actions">  <img src="https://github.com/thinkr-open/gemstones/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/thinkr-open/gemstones" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/gemstones/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|elvis|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=elvis">  <img src="https://www.r-pkg.org/badges/version/elvis"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/elvis">  <img src="https://cranlogs.r-pkg.org/badges/elvis"/></a>|<a href="https://github.com/thinkr-open/elvis/actions">  <img src="https://github.com/thinkr-open/elvis/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/thinkr-open/elvis" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/elvis/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|bank|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=bank">  <img src="https://www.r-pkg.org/badges/version/bank"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/bank">  <img src="https://cranlogs.r-pkg.org/badges/bank"/></a>|<a href="https://github.com/thinkr-open/bank/actions">  <img src="https://github.com/thinkr-open/bank/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/thinkr-open/bank" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/bank/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|w3css|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=w3css">  <img src="https://www.r-pkg.org/badges/version/w3css"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/w3css">  <img src="https://cranlogs.r-pkg.org/badges/w3css"/></a>|<a href="https://github.com/thinkr-open/w3css/actions">  <img src="https://github.com/thinkr-open/w3css/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/thinkr-open/w3css" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/w3css/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|brochure|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=brochure">  <img src="https://www.r-pkg.org/badges/version/brochure"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/brochure">  <img src="https://cranlogs.r-pkg.org/badges/brochure"/></a>|<a href="https://github.com/colinfay/brochure/actions">  <img src="https://github.com/colinfay/brochure/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/colinfay/brochure" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/colinfay/brochure/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
-|ghooks|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=ghooks">  <img src="https://www.r-pkg.org/badges/version/ghooks"/></a>|<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/ghooks">  <img src="https://cranlogs.r-pkg.org/badges/ghooks"/></a>|<a href="https://github.com/thinkr-open/ghooks/actions">  <img src="https://github.com/thinkr-open/ghooks/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" href="https://github.com/thinkr-open/ghooks" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/ghooks/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>|
+|golem|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=golem">  <img src="https://www.r-pkg.org/badges/version/golem"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/golem">  <img src="https://cranlogs.r-pkg.org/badges/golem"/></a>|<a target="_blank" href="https://github.com/ThinkR-open/golem/actions">  <img src="https://github.com/ThinkR-open/golem/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/ThinkR-open/golem" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/ThinkR-open/golem/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|shinipsum|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=shinipsum">  <img src="https://www.r-pkg.org/badges/version/shinipsum"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/shinipsum">  <img src="https://cranlogs.r-pkg.org/badges/shinipsum"/></a>|<a target="_blank" href="https://github.com/ThinkR-open/shinipsum/actions">  <img src="https://github.com/ThinkR-open/shinipsum/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/ThinkR-open/shinipsum" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/ThinkR-open/shinipsum/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|fakir|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=fakir">  <img src="https://www.r-pkg.org/badges/version/fakir"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/fakir">  <img src="https://cranlogs.r-pkg.org/badges/fakir"/></a>|<a target="_blank" href="https://github.com/ThinkR-open/fakir/actions">  <img src="https://github.com/ThinkR-open/fakir/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/ThinkR-open/fakir" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/ThinkR-open/fakir/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|gargoyle|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=gargoyle">  <img src="https://www.r-pkg.org/badges/version/gargoyle"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/gargoyle">  <img src="https://cranlogs.r-pkg.org/badges/gargoyle"/></a>|<a target="_blank" href="https://github.com/colinfay/gargoyle/actions">  <img src="https://github.com/colinfay/gargoyle/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/colinfay/gargoyle" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/colinfay/gargoyle/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|dockerfiler|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg"/>|<a href="https://CRAN.R-project.org/package=dockerfiler">  <img src="https://www.r-pkg.org/badges/version/dockerfiler"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/dockerfiler">  <img src="https://cranlogs.r-pkg.org/badges/dockerfiler"/></a>|<a target="_blank" href="https://github.com/thinkr-open/dockerfiler/actions">  <img src="https://github.com/thinkr-open/dockerfiler/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/dockerfiler" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/dockerfiler/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|gemstones|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=gemstones">  <img src="https://www.r-pkg.org/badges/version/gemstones"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/gemstones">  <img src="https://cranlogs.r-pkg.org/badges/gemstones"/></a>|<a target="_blank" href="https://github.com/thinkr-open/gemstones/actions">  <img src="https://github.com/thinkr-open/gemstones/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/gemstones" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/gemstones/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|elvis|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=elvis">  <img src="https://www.r-pkg.org/badges/version/elvis"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/elvis">  <img src="https://cranlogs.r-pkg.org/badges/elvis"/></a>|<a target="_blank" href="https://github.com/thinkr-open/elvis/actions">  <img src="https://github.com/thinkr-open/elvis/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/elvis" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/elvis/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|bank|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=bank">  <img src="https://www.r-pkg.org/badges/version/bank"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/bank">  <img src="https://cranlogs.r-pkg.org/badges/bank"/></a>|<a target="_blank" href="https://github.com/thinkr-open/bank/actions">  <img src="https://github.com/thinkr-open/bank/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/bank" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/bank/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|w3css|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=w3css">  <img src="https://www.r-pkg.org/badges/version/w3css"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/w3css">  <img src="https://cranlogs.r-pkg.org/badges/w3css"/></a>|<a target="_blank" href="https://github.com/thinkr-open/w3css/actions">  <img src="https://github.com/thinkr-open/w3css/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/w3css" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/w3css/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|brochure|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=brochure">  <img src="https://www.r-pkg.org/badges/version/brochure"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/brochure">  <img src="https://cranlogs.r-pkg.org/badges/brochure"/></a>|<a target="_blank" href="https://github.com/colinfay/brochure/actions">  <img src="https://github.com/colinfay/brochure/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/colinfay/brochure" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/colinfay/brochure/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|ghooks|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=ghooks">  <img src="https://www.r-pkg.org/badges/version/ghooks"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/ghooks">  <img src="https://cranlogs.r-pkg.org/badges/ghooks"/></a>|<a target="_blank" href="https://github.com/thinkr-open/ghooks/actions">  <img src="https://github.com/thinkr-open/ghooks/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/ghooks" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/ghooks/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
 
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
