--- a/packages/dockerfiler/index.qmd
+++ b/packages/dockerfiler/index.qmd
@@ -21,21 +21,21 @@ The goal of `{dockerfiler}` is to provide an easy way to create Dockerfiles from
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg">
 
-<a href="https://CRAN.R-project.org/package=dockerfiler">
+<a  target = "_blank" href="https://CRAN.R-project.org/package=dockerfiler">
 <img src = "https://www.r-pkg.org/badges/version/dockerfiler">
 </a>
 
-<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/dockerfiler">
+<a  target = "_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/dockerfiler">
   <img src = "https://cranlogs.r-pkg.org/badges/dockerfiler">
 </a>
 
-<a href="https://github.com/thinkr-open/dockerfiler/actions">
+<a  target = "_blank" href="https://github.com/thinkr-open/dockerfiler/actions">
  <img src="https://github.com/thinkr-open/dockerfiler/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
 </a>
 
-<a class="github-button" href="https://github.com/thinkr-open/dockerfiler" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star dockerfiler on Github</a>
+<a class="github-button"  target = "_blank" href="https://github.com/thinkr-open/dockerfiler" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars:</a>
 
-<a class="github-button" href="https://github.com/thinkr-open/dockerfiler/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
+<a class="github-button"  target = "_blank" href="https://github.com/thinkr-open/dockerfiler/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues: </a>
 </div>
 
 :::
