--- a/packages/fakir/index.qmd
+++ b/packages/fakir/index.qmd
@@ -21,21 +21,21 @@ image: "/img/fakir.png"
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg">
 
-<a href="https://CRAN.R-project.org/package=fakir">
+<a  target = "_blank" href="https://CRAN.R-project.org/package=fakir">
 <img src = "https://www.r-pkg.org/badges/version/fakir">
 </a>
 
-<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/fakir">
+<a  target = "_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/fakir">
   <img src = "https://cranlogs.r-pkg.org/badges/fakir">
 </a>
 
-<a href="https://github.com/ThinkR-open/fakir/actions">
+<a  target = "_blank" href="https://github.com/ThinkR-open/fakir/actions">
  <img src="https://github.com/ThinkR-open/fakir/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
 </a>
 
-<a class="github-button" href="https://github.com/ThinkR-open/fakir" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star fakir on Github</a>
+<a class="github-button"  target = "_blank" href="https://github.com/ThinkR-open/fakir" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars:</a>
 
-<a class="github-button" href="https://github.com/ThinkR-open/fakir/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
+<a class="github-button"  target = "_blank" href="https://github.com/ThinkR-open/fakir/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues: </a>
 </div>
 
 :::
