--- a/packages/gargoyle/index.qmd
+++ b/packages/gargoyle/index.qmd
@@ -21,21 +21,21 @@ image: "/img/gargoyle.png"
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg">
 
-<a href="https://CRAN.R-project.org/package=gargoyle">
+<a  target = "_blank" href="https://CRAN.R-project.org/package=gargoyle">
 <img src = "https://www.r-pkg.org/badges/version/gargoyle">
 </a>
 
-<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/gargoyle">
+<a  target = "_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/gargoyle">
   <img src = "https://cranlogs.r-pkg.org/badges/gargoyle">
 </a>
 
-<a href="https://github.com/colinfay/gargoyle/actions">
+<a  target = "_blank" href="https://github.com/colinfay/gargoyle/actions">
  <img src="https://github.com/colinfay/gargoyle/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
 </a>
 
-<a class="github-button" href="https://github.com/colinfay/gargoyle" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star gargoyle on Github</a>
+<a class="github-button"  target = "_blank" href="https://github.com/colinfay/gargoyle" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars:</a>
 
-<a class="github-button" href="https://github.com/colinfay/gargoyle/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
+<a class="github-button"  target = "_blank" href="https://github.com/colinfay/gargoyle/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues: </a>
 </div>
 
 :::
