--- a/packages/gemstones/index.qmd
+++ b/packages/gemstones/index.qmd
@@ -21,21 +21,21 @@ The goal of `{gemstones}` is to allow you to add some JavaScript libraries to yo
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg">
 
-<a href="https://CRAN.R-project.org/package=gemstones">
+<a  target = "_blank" href="https://CRAN.R-project.org/package=gemstones">
 <img src = "https://www.r-pkg.org/badges/version/gemstones">
 </a>
 
-<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/gemstones">
+<a  target = "_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/gemstones">
   <img src = "https://cranlogs.r-pkg.org/badges/gemstones">
 </a>
 
-<a href="https://github.com/thinkr-open/gemstones/actions">
+<a  target = "_blank" href="https://github.com/thinkr-open/gemstones/actions">
  <img src="https://github.com/thinkr-open/gemstones/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
 </a>
 
-<a class="github-button" href="https://github.com/thinkr-open/gemstones" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star gemstones on Github</a>
+<a class="github-button"  target = "_blank" href="https://github.com/thinkr-open/gemstones" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars:</a>
 
-<a class="github-button" href="https://github.com/thinkr-open/gemstones/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
+<a class="github-button"  target = "_blank" href="https://github.com/thinkr-open/gemstones/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues: </a>
 </div>
 
 :::
