--- a/packages/golem/index.qmd
+++ b/packages/golem/index.qmd
@@ -21,21 +21,21 @@ It provides a set of tools to help you build a `{shiny}` application in a struct
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg">
 
-<a href="https://CRAN.R-project.org/package=golem">
+<a  target = "_blank" href="https://CRAN.R-project.org/package=golem">
 <img src = "https://www.r-pkg.org/badges/version/golem">
 </a>
 
-<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/golem">
+<a  target = "_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/golem">
   <img src = "https://cranlogs.r-pkg.org/badges/golem">
 </a>
 
-<a href="https://github.com/ThinkR-open/golem/actions">
+<a  target = "_blank" href="https://github.com/ThinkR-open/golem/actions">
  <img src="https://github.com/ThinkR-open/golem/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
 </a>
 
-<a class="github-button" href="https://github.com/ThinkR-open/golem" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star golem on Github</a>
+<a class="github-button"  target = "_blank" href="https://github.com/ThinkR-open/golem" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars:</a>
 
-<a class="github-button" href="https://github.com/ThinkR-open/golem/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
+<a class="github-button"  target = "_blank" href="https://github.com/ThinkR-open/golem/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues: </a>
 </div>
 
 :::
