--- a/index.qmd
+++ b/index.qmd
@@ -43,6 +43,8 @@ install.packages("golemverse")
 
 - `{ghooks}`, `r utils::packageDescription("ghooks")[["Title"]]`
 
+- `{skeleton}`, `r utils::packageDescription("skeleton")[["Title"]]`
+
 - `{shinipsum}`, `r utils::packageDescription("shinipsum")[["Title"]]`
 
 - `{w3css}`, `r utils::packageDescription("w3css")[["Title"]]`
@@ -61,7 +63,7 @@ Learn more about building `{shiny}` apps for production with the _Engineering Pr
 The online version of the book is free to read on <https://engineering-shiny.org/>.
 
 This book is available in print, published in the R Series by Chapman and Hall/CRC.
-You can grab a copy on [routledge.com](https://www.routledge.com/Engineering-Production-Grade-Shiny-Apps/Fay-Rochette-Guyader-Girard/p/book/9780367466022).
+You can grab a copy on [routledge.com](https://www.routledge.com/Engineering-Production-Grade-Shiny-Apps/Fay-Rochette-Guyader-Girard/p/book/9780367466022?utm_source=author&utm_medium=shared_link&utm_campaign=B043139_jm1_5ll_6rm_t081_1al_engineeringproduction-gradeshinyappsauthorshare).
 
 :::
 
