--- a/packages/index.qmd
+++ b/packages/index.qmd
@@ -35,6 +35,7 @@ listing:
 |w3css|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=w3css">  <img src="https://www.r-pkg.org/badges/version/w3css"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/w3css">  <img src="https://cranlogs.r-pkg.org/badges/w3css"/></a>|<a target="_blank" href="https://github.com/thinkr-open/w3css/actions">  <img src="https://github.com/thinkr-open/w3css/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/w3css" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/w3css/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
 |brochure|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=brochure">  <img src="https://www.r-pkg.org/badges/version/brochure"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/brochure">  <img src="https://cranlogs.r-pkg.org/badges/brochure"/></a>|<a target="_blank" href="https://github.com/colinfay/brochure/actions">  <img src="https://github.com/colinfay/brochure/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/colinfay/brochure" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/colinfay/brochure/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
 |ghooks|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=ghooks">  <img src="https://www.r-pkg.org/badges/version/ghooks"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/ghooks">  <img src="https://cranlogs.r-pkg.org/badges/ghooks"/></a>|<a target="_blank" href="https://github.com/thinkr-open/ghooks/actions">  <img src="https://github.com/thinkr-open/ghooks/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/thinkr-open/ghooks" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/thinkr-open/ghooks/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
+|skeleton|<img src="https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg"/>|<a href="https://CRAN.R-project.org/package=skeleton">  <img src="https://www.r-pkg.org/badges/version/skeleton"/></a>|<a target="_blank" href="https://cranlogs.r-pkg.org/downloads/total/last-month/skeleton">  <img src="https://cranlogs.r-pkg.org/badges/skeleton"/></a>|<a target="_blank" href="https://github.com/colinfay/skeleton/actions">  <img src="https://github.com/colinfay/skeleton/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/></a>|<a class="github-button" target = "_blank" href="https://github.com/colinfay/skeleton" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Stars</a>|<a class="github-button" href="https://github.com/colinfay/skeleton/issues" target = "_blank" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issues</a>|
 
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
