fix: boilerplate instead of framework

--- a/news/skeleteon-css-in-shiny/index.qmd
+++ b/news/skeleteon-css-in-shiny/index.qmd
@@ -8,7 +8,7 @@ A dead simple, responsive, minimalist CSS framework.
 
 ![](featured.png)
 
-[Skeleton css](http://getskeleton.com/) is a "a dead simple, responsive" CSS framework focused on mobile-first design and a minimalistic approach.
+[Skeleton css](http://getskeleton.com/) is a "a dead simple, responsive" CSS boilerplate focused on mobile-first design and a minimalistic approach.
 It comes with a set of pre-defined styles for basic HTML elements such as typography, forms, buttons, tables, and grids, which can be easily customized. It is built with a 12-column grid system, making it easy to create flexible and responsive layouts for different screen sizes and devices.
 
 ## {skeleton}
